deploy: 57f89b0ae7a6d794230db71de82d0e81c21096a9

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <section id=sidebar>
 Recent posts:
 <ul>
+<li><a href=https://arran4.github.io/githubpages/post/my-first-post/>My First Post (2021-09-11 11:50:17 +1000 +1000)</a></li>
 </ul>
 </section>
 </body>
