deploy: c7f0302b9107ba4f9a3ee40caeb71f80834ddae4

--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <head>
 <meta name=generator content="Hugo 0.88.1">
 <meta charset=utf-8>
-<title>Arrans Github Pages</title>
-<link rel=canonical href=https://arran4.github.io/githubpages/>
-<link href=/githubpages/index.xml rel=alternate type=application/rss+xml title="Arrans Github Pages">
+<title>Arran's Github Pages | Arrans Github Pages</title>
+<link rel=stylesheet href=/githubpages/css/style.css>
 </head>
 <body lang=en-us>
+<header>
+<h1><a href=https://arran4.github.io/githubpages/>Arrans Github Pages</a></h1>
+</header>
 <section id=main>
 <h1>Arran's Github Pages</h1>
 <article itemprop=articleBody id=content class="w-90 lh-copy">
@@ -16,9 +18,13 @@
 <section id=sidebar>
 Recent posts:
 <ul>
-<li><a href=https://arran4.github.io/githubpages/post/my-second-post/>This is my second post (2021-09-11 14:50:17 +1000 +1000)</a></li>
-<li><a href=https://arran4.github.io/githubpages/post/my-first-post/>My First Post (2021-09-11 11:50:17 +1000 +1000)</a></li>
+<li><a href=https://arran4.github.io/githubpages/post/more-markdown.html>More Markdown (2021-10-05 12:00:00 +1000 +1000)</a></li>
+<li><a href=https://arran4.github.io/githubpages/post/markdown-basics.html>Markdown Basics (2021-10-01 12:00:00 +1000 +1000)</a></li>
+<li><a href=https://arran4.github.io/githubpages/post/my-second-post.html>This is my second post (2021-09-11 14:50:17 +1000 +1000)</a></li>
 </ul>
 </section>
+<footer>
+<p>&copy; 2025 Arrans Github Pages</p>
+</footer>
 </body>
 </html>
